--- a/form.html
+++ b/form.html
@@ -41,6 +41,7 @@
     <script> 
         $(function(){
           $("#header").load("header.html"); 
+          $("#footer").load("footer.html"); 
         });
     </script> 
     
@@ -305,32 +306,10 @@
             </form>
         </div>
     </section>
-    <footer>
-        <div class="row">
-            <div class="col span-1-of-2">
-                <ul class="footer-nav">
-                    <li>
-                        <a href="index">Home</a>
-                    </li>
-                    <li>
-                        <a href="services">services</a>
-                    </li>
-                    <li>
-                        <a href="#">Build a PC</a>
-                    </li>
-                    <li>
-                        <a href="index#contact">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="col span-1-of-2">
-                <p>
-                    &#169;ValerieTech, 2018
-                </p>
-            </div>
-        </div>
+    <footer id="footer">
     </footer>
 </body>
 <script src="vendors/js/jquery.waypoints.min.js"></script>
 <script src="resources/js/function-form.js"></script>
+<script src="resources/js/function-header.js"></script>
 </html>
