--- a/offers.html
+++ b/offers.html
@@ -186,4 +186,5 @@
 </body>
 <script src="vendors/js/jquery.waypoints.min.js"></script>
 <script src="resources/js/function-offers.js"></script>
+<script src="resources/js/function-header.js"></script>
 </html>
