--- a/services.html
+++ b/services.html
@@ -194,7 +194,7 @@
                         What all do you offer in upgrades?
                     </p>
                     <p class="faq-answer">
-                        Depending on the specification and condition of your PC or laptop, our facility varies. Get in touch to know more.
+                        Depending on the specification and condition of your PC or laptop, our service varies. Get in touch to know more.
                     </p>
                 </li>
                 <li>
