fixed ONLY index header

--- a/header.html
+++ b/header.html
@@ -1,23 +1,26 @@
 
 <script src="/resources/js/function-header.js"></script>
 <nav>
-    <div class="row">
-        <img src="../resources/img/logo.png" alt="Logo" class="logo-black">
-        <img src="../resources/img/logo-white.png" alt="Logo" class="logo">
-        <ul class="main-nav js--main-nav">
-            <li>
-                <a href="index">Home</a>
-            </li>
-            <li>
-                <a href="services">services and FAQs</a>
-            </li>
-            <li>
-                <a href="index#contact">Contact</a>
-            </li>
-        </ul>
-        <a class="mobile-nav-icon js--nav-icon"><i class="icon ion-ios-menu"></i></a>
-    </div>
-</nav>
+            <div class="row">
+                <img src="resources/img/logo-white.png" alt="Logo" class="logo">
+                <img src="resources/img/logo.png" alt="Logo" class="logo-black">
+                <ul class="main-nav js--main-nav">
+                    <li>
+                        <a href="#why-us">Why us?</a>
+                    </li>
+                    <li>
+                        <a href="#facilities">Facilities</a>
+                    </li>
+                    <li>
+                        <a href="#testimonials">Testimonials</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+                <a class="mobile-nav-icon js--nav-icon"><i class="icon ion-ios-menu"></i></a>
+            </div>
+        </nav>
 <div class="banner-container">
 
     <div class="banners fade" style="background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url('resources/img/hero-image.jpg')"></div>
