Split header files, things working

--- a/form.html
+++ b/form.html
@@ -40,7 +40,7 @@
     
     <script> 
         $(function(){
-          $("#header").load("header.html"); 
+          $("#header").load("header2.html"); 
           $("#footer").load("footer.html"); 
         });
     </script> 
@@ -312,4 +312,5 @@
 <script src="vendors/js/jquery.waypoints.min.js"></script>
 <script src="resources/js/function-form.js"></script>
 <script src="resources/js/function-header.js"></script>
+<script src="resources/js/function-nav.js"></script>
 </html>
