--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-597WRK6" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    
     <header id="header">
         
     </header>
-    <section class="section section-mission js--section-mission">
+    <section class="section section-mission js--section-mission js--section-trigger">
         <div class="row">
             <div class="mission">
                 <h3>
