--- a/header2.html
+++ b/header2.html
@@ -1,20 +1,20 @@
 <script src="/resources/js/function-header.js"></script>
 <nav>
     <div class="row">
-        <a href="#top"><img src="resources/img/logo-white.png" alt="Logo" class="logo"></a>
-        <a href="#top"><img src="resources/img/logo.png" alt="Logo" class="logo-black"></a>
+        <a href="#top"><img src="../resources/img/logo.png" alt="Logo" class="logo-black"></a>
+        <a href="#top"><img src="../resources/img/logo-white.png" alt="Logo" class="logo"></a>
         <ul class="main-nav js--main-nav">
             <li>
-                <a href="#why-us">Why us?</a>
+                <a href="index">Home</a>
             </li>
             <li>
-                <a href="#services">Services</a>
+                <a href="services">Services and FAQs</a>
             </li>
             <li>
-                <a href="#testimonials">Testimonials</a>
+                <a href="offers">Offers</a>
             </li>
             <li>
-                <a href="#contact">Contact</a>
+                <a href="index#contact">Contact</a>
             </li>
         </ul>
         <a class="mobile-nav-icon js--nav-icon"><i class="icon ion-ios-menu"></i></a>
@@ -24,22 +24,20 @@
 
     <div class="banners fade" style="background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url('resources/img/hero-image.jpg')"></div>
 
-    <div class="banners fade" style="background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url('resources/img/banner-1.jpg')"></div>
+    <div class="banners fade" style="background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url('../resources/img/banner-1.jpg')"></div>
 
-    <div class="banners fade" style="background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url('resources/img/banner-2.jpg')"></div>
+    <div class="banners fade" style="background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url('../resources/img/banner-2.jpg'); background-position: center -150px;"></div>
 
-    <div class="banners fade" style="background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url('resources/img/banner-3.jpg')"></div>
+    <div class="banners fade" style="background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url('../resources/img/banner-3.jpg'); background-position: center -220px;"></div>
 
-    <div class="banners fade" style="background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url('resources/img/banner-4.jpg')"></div>
+    <div class="banners fade" style="background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url('../resources/img/banner-4.jpg'); background-position: center -300px;"></div>
 
-    <div class="banners fade" style="background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url('resources/img/banner-5.jpg')"></div>
+    <div class="banners fade" style="background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)),url('../resources/img/banner-5.jpg'); background-position: center -150px;"></div>
+
     <div class="hero-text-box">
-        <h1 class="hero-text fade" style="text-transform: none;">
-            TAILOR-MADE PCs.<br>WE BUILD, YOU BRAG.
+        <h1 class="hero-text fade">
+            Don't just build to own.<br>Build to Brag.
         </h1>
-        <!--Built and personalized by <img src="/resources/img/favicon.png" style="display:inline-block;height:70px;width:auto;position:relative;
-                top: 20px;">
-        -->
         <h1 class="hero-text fade">
             Tight budget but want to pwn some noobs?<br>We’ve got you covered.
         </h1>
@@ -55,8 +53,6 @@
         <h1 class="hero-text fade">
             Spend less time configuring,<br>more time mining.
         </h1>
-        <a class="btn btn-full hero" href="form">Build me a PC!</a>
-        <a class="btn btn-ghost hero js--scroll-to-services" href="#">Show me more</a>
     </div>
 
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
