--- a/offers.html
+++ b/offers.html
@@ -39,7 +39,7 @@
     
     <script> 
         $(function(){
-          $("#header").load("header.html"); 
+          $("#header").load("header2.html"); 
           $("#footer").load("footer.html");
         });
     </script> 
@@ -56,7 +56,7 @@
     </header>
 
 
-    <section class="section-offers">
+    <section class="section-offers js--section-trigger">
         <h2>
             Offers
         </h2>
@@ -187,4 +187,5 @@
 <script src="vendors/js/jquery.waypoints.min.js"></script>
 <script src="resources/js/function-offers.js"></script>
 <script src="resources/js/function-header.js"></script>
+<script src="resources/js/function-nav.js"></script>
 </html>
