--- a/services.html
+++ b/services.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
     <link rel="stylesheet" type="text/css" href="vendors/css/animate.css">
     <link rel="stylesheet" type="text/css" href="resources/css/style-services.css">
-    <link rel="stylesheet" type="text/css" href="resources/css/queries-services.css">
     <link rel="stylesheet" type="text/css" href="resources/css/queries-header.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/queries-services.css">
     <link href="https://unpkg.com/ionicons@4.2.1/dist/css/ionicons.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -31,7 +31,7 @@
     </script>
     <script> 
         $(function(){
-          $("#header").load("header.html"); 
+          $("#header").load("header2.html"); 
           $("#footer").load("footer.html");
         });
     </script> 
@@ -355,4 +355,5 @@
 </body>
 <script src="vendors/js/jquery.waypoints.min.js"></script>
 <script src="resources/js/function-services.js"></script>
+<script src="resources/js/function-nav.js"></script>
 </html>
