started reform of offers

--- a/offers.html
+++ b/offers.html
@@ -55,8 +55,45 @@
     <header id="header">
     </header>
 
-
-    <section class="section-offers js--section-trigger">
+    <section class="section-offers">
+        <div class="row">
+            <h2>
+                Offers
+            </h2>
+            <h3>
+                Do we really need to sweeten the pot? We'll do it anyway.
+            </h3>
+            <hr>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-2 offer" style="background-image: url(resources/img/offer1.jpg);background-position: center;background-size: cover">
+                <h4>Hackintoshes at upto 10% off</h4>
+                <i class="icon ion-ios-information-circle-outline info2"></i>
+                <i class="icon ion-ios-information-circle info"></i>
+            </div>
+            <div class="col span-1-of-2 offer">
+                <h4>Exponential referral program</h4>
+                <i class="icon ion-ios-information-circle-outline info2"></i>
+                <i class="icon ion-ios-information-circle info"></i>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col span-1-of-2 offer">
+                <h4>Goodie bags with every PC</h4>
+                <i class="icon ion-ios-information-circle-outline info2"></i>
+                <i class="icon ion-ios-information-circle info"></i>
+            </div>
+            <div class="col span-1-of-2 offer">
+                <h4>18% GST Credit on any transaction</h4>
+                <i class="icon ion-ios-information-circle-outline info2"></i>
+                <i class="icon ion-ios-information-circle info"></i>
+            </div>
+        </div>
+        <h3>
+            Check this space for updates.<br>Contact us below for further details
+        </h3>
+    </section>
+    <!--<section class="section-offers js--section-trigger">
         <h2>
             Offers
         </h2>
@@ -94,7 +131,7 @@
         <h3>
             Contact us below for further details
         </h3>
-    </section>
+    </section>-->
 
     <section class="section section-contact js--section-contact" id="contact">
         <div class="row">
