fixed offers page (queries left), and fixed cursors

--- a/offers.html
+++ b/offers.html
@@ -65,32 +65,49 @@
             </h3>
             <hr>
         </div>
+        <div class="row row-offer">
+            <div class="col span-1-of-2 offer" style="background-image: url(resources/img/offer1.png);background-position: center;background-size: cover">
+                <i class="icon ion-ios-information-circle-outline info"></i>
+                <i class="icon ion-ios-information-circle info2"></i>
+                <p class="offer-desc">Who says you need a Mac to enjoy MacOS? Custom built PCs running MacOS, publicly available for the first time in India. Valid only for the first 15 customers.</p>
+            </div>
+            <div class="col span-1-of-2 offer" style="background-image: url(resources/img/offer2.png);background-position: center;background-size: cover">
+                <i class="icon ion-ios-information-circle-outline info"></i>
+                <i class="icon ion-ios-information-circle info2"></i>
+                <p class="offer-desc">We build PCs, you reap the benefits. We have an extensive referral program that only gets better the higher up you go! Share your username with your friends and earn credit with every purchase they make. Contact us to learn more.</p>
+            </div>
+        </div>
         <div class="row">
-            <div class="col span-1-of-2 offer" style="background-image: url(resources/img/offer1.jpg);background-position: center;background-size: cover">
+            <div class="col span-1-of-2 offer-text">
                 <h4>Hackintoshes at upto 10% off</h4>
-                <i class="icon ion-ios-information-circle-outline info2"></i>
-                <i class="icon ion-ios-information-circle info"></i>
             </div>
-            <div class="col span-1-of-2 offer">
+            <div class="col span-1-of-2 offer-text">
                 <h4>Exponential referral program</h4>
-                <i class="icon ion-ios-information-circle-outline info2"></i>
-                <i class="icon ion-ios-information-circle info"></i>
+            </div>
+        </div>
+        <div class="row row-offer">
+            <div class="col span-1-of-2 offer" style="background-image: url(resources/img/offer3.png);background-position: center;background-size: contain">
+                <i class="icon ion-ios-information-circle-outline info"></i>
+                <i class="icon ion-ios-information-circle info2"></i>
+                <p class="offer-desc">Our PCs come with a care package that contains everything you'll need in an emergecy, complete with a 8gb recovery pen drive and extra fittings and cables.</p>
+            </div>
+            <div class="col span-1-of-2 offer" style="background-image: url(resources/img/offer4.png);background-position: center;background-size: contain">
+                <i class="icon ion-ios-information-circle-outline info"></i>
+                <i class="icon ion-ios-information-circle info2"></i>
+                <p class="offer-desc">We're registered with the GST in India (Our GSTIN is 27BFXPJ8219R1Z8). So everytime you make a purchase at ValerieTech, you get flat 18% credit on your entire purchase amount!</p>
             </div>
         </div>
         <div class="row">
-            <div class="col span-1-of-2 offer">
-                <h4>Goodie bags with every PC</h4>
-                <i class="icon ion-ios-information-circle-outline info2"></i>
-                <i class="icon ion-ios-information-circle info"></i>
+            <div class="col span-1-of-2 offer-text">
+                <h4>Care package with every PC</h4>
             </div>
-            <div class="col span-1-of-2 offer">
-                <h4>18% GST Credit on any transaction</h4>
-                <i class="icon ion-ios-information-circle-outline info2"></i>
-                <i class="icon ion-ios-information-circle info"></i>
+            <div class="col span-1-of-2 offer-text">
+                <h4>GST Credit on all transactions</h4>
             </div>
         </div>
+        <br><br><br><br>
         <h3>
-            Check this space for updates.<br>Contact us below for further details
+            Check this space for updates<br>Contact us below for further details
         </h3>
     </section>
     <!--<section class="section-offers js--section-trigger">
