FIxed footer, close mobile menu after clicking

--- a/footer.html
+++ b/footer.html
@@ -2,13 +2,16 @@
     <div class="col span-1-of-2">
         <ul class="footer-nav">
             <li>
-                <a href="index">Home</a>
+                <a href="index#top">Home</a>
             </li>
             <li>
-                <a href="services">services</a>
+                <a href="services">Services</a>
             </li>
             <li>
-                <a href="#">Build a PC</a>
+                <a href="form">Build a PC</a>
+            </li>
+            <li>
+                <a href="offers">Offers</a>
             </li>
             <li>
                 <a href="index#contact">Contact</a>
