--- a/header.html
+++ b/header.html
@@ -17,7 +17,7 @@
                 <a href="#contact">Contact</a>
             </li>
         </ul>
-        <a class="mobile-nav-icon js--nav-icon"><i class="icon ion-ios-menu"></i></a>
+        <a class="mobile-nav-icon js--nav-icon" id="hamburg"><i class="icon ion-ios-menu"></i></a>
     </div>
 </nav>
 <div class="banner-container" id="top">
