--- a/services.html
+++ b/services.html
@@ -319,7 +319,7 @@
                             <label for="phone">Phone Number</label>
                         </div>
                         <div class="col span-2-of-3">
-                            <input type="email" name="phone" id="phone" placeholder="Your phone number" required>
+                            <input type="phone" name="phone" id="phone" placeholder="Your phone number" required>
                         </div>
                     </div>
                     <div class="row">
