--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name="description" content="We build custom PCs and laptops for gaming and content creation. Our service, maintenance, and upgrade facilities remain unsurpassed in Mumbai.">
+<meta name="description" content="We build custom PCs and laptops for gaming, content creation and other professional workloads. Our service, maintenance, and upgrade facilities remain unsurpassed in Mumbai.">
 <head>
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -36,7 +36,7 @@
           $("#footer").load("footer.html"); 
         });
     </script> 
-    <title>Valerie Tech | Custom build PCs for your every need</title>
+    <title>Valerie Tech | Custom Build PCs | Gaming PCs</title>
 </head>
 
 <body>
