queries width vw left

--- a/offers.html
+++ b/offers.html
@@ -73,7 +73,7 @@
                     <p class="offer-desc">Who says you need a Mac to enjoy MacOS? Custom built PCs running MacOS, publicly available for the first time in India. Valid only for the first 15 customers.</p>
                 </div>
                 <div class="row offer-text">
-                    <h4>Hackintoshes at upto 10% off</h4>
+                    <h4 align="center">Hackintoshes at upto 10% off</h4>
                 </div>
             </div>
             <div class="col span-1-of-2">
@@ -83,7 +83,7 @@
                     <p class="offer-desc">We build PCs, you reap the benefits. We have an extensive referral program that only gets better the higher up you go! Share your username with your friends and earn credit with every purchase they make. Contact us to learn more.</p>
                 </div>
                 <div class="row offer-text">
-                    <h4>Exponential referral program</h4>
+                    <h4 align="center">Exponential referral program</h4>
                 </div>
 	       </div>
         </div>
@@ -103,7 +103,7 @@
                     <p class="offer-desc">Our PCs come with a care package that contains everything you'll need in an emergecy, complete with a 8gb recovery pen drive and extra fittings and cables.</p>
                 </div>
                 <div class="row offer-text">
-                    <h4>Care package with every PC</h4>
+                    <h4 align="center">Care package with every PC</h4>
                 </div>
             </div>
             
@@ -114,7 +114,7 @@
                     <p class="offer-desc">We're registered with the GST in India (Our GSTIN is 27BFXPJ8219R1Z8). So everytime you make a purchase at ValerieTech, you get flat 18% credit on your entire purchase amount!</p>
                 </div>
                 <div class="row offer-text">
-                    <h4>GST Credit on all transactions</h4>
+                    <h4 align="center">GST Credit on all transactions</h4>
                 </div>
             </div>
         </div>
