--- a/form.html
+++ b/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+<meta name="description" content="Build me a PC. Gaming. Content Creation. Corporate PCs.">
 <head>
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -35,7 +35,7 @@
           gtag('config', 'UA-37614837-2');
         </script>
     <link rel="shortcut icon" type="image/png" href="/resources/img/favicon.png"/>
-    <title>Valerie Tech</title>
+    <title>Build a PC with Valerie Tech</title>
     
     
     <script> 
