--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         });
     </script> 
     <title>Valerie Tech | Custom Build PCs | Gaming PCs</title>
+    <desc></desc>
 </head>
 
 <body>
