--- a/offers.html
+++ b/offers.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="description" content="Build your dream PC with Valerie Tech. Get in touch with our team now!">
 <head>
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -34,7 +35,7 @@
           gtag('config', 'UA-37614837-2');
         </script>
     <link rel="shortcut icon" type="image/png" href="/resources/img/favicon.png"/>
-    <title>Valerie Tech</title>
+    <title>Offers by Valerie Tech</title>
     
     
     <script> 
