--- a/services.html
+++ b/services.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="description" content="Your PCs go through rigorous testing till we optimize it to give the best performance. We assure upgraded service, preloaded applications and long-term commitment.">
 
 <head>
     <!-- Google Tag Manager -->
@@ -36,7 +37,7 @@
         });
     </script> 
     <link rel="shortcut icon" type="image/png" href="/resources/img/favicon.png"/>
-    <title>Valerie Tech</title>
+    <title>Services of Valerie Tech</title>
 </head>
 
 <body>
