Fixed offers queries

--- a/header.html
+++ b/header.html
@@ -5,16 +5,19 @@
         <a href="#top"><img src="resources/img/logo.png" alt="Logo" class="logo-black"></a>
         <ul class="main-nav js--main-nav">
             <li>
-                <a href="#why-us">Why us?</a>
+                <a href="index">Home</a>
             </li>
             <li>
-                <a href="#services">Services</a>
+                <a href="services">Services and FAQs</a>
             </li>
             <li>
-                <a href="#testimonials">Testimonials</a>
+                <a href="offers">Offers</a>
             </li>
             <li>
-                <a href="#contact">Contact</a>
+                <a href="form">Build a PC</a>
+            </li>
+            <li>
+                <a href="index#contact">Contact Us</a>
             </li>
         </ul>
         <a class="mobile-nav-icon js--nav-icon" id="hamburg"><i class="icon ion-ios-menu"></i></a>
