--- a/index.html
+++ b/index.html
@@ -234,16 +234,18 @@
                 </h3>
                 <ul class="social-icons">
                     <li>
-                        <a href="#"><i class="icon ion-logo-facebook"></i></a>
+                        <a href="https://facebook.com/valerietech.in"><i class="icon ion-logo-facebook"></i></a>
                     </li>
+<!--
                     <li>
-                        <a href="#"><i class="icon ion-logo-twitter"></i></a>
+                        <a href="https://twitter.com/valerietech.in"><i class="icon ion-logo-twitter"></i></a>
                     </li>
                     <li>
                         <a href="#"><i class="icon ion-logo-googleplus"></i></a>
                     </li>
+-->
                     <li>
-                        <a href="#"><i class="icon ion-logo-instagram"></i></a>
+                        <a href="https://instagram.com/valerietech.in"><i class="icon ion-logo-instagram"></i></a>
                     </li>
                 </ul>
             </div>
