--- a/services.html
+++ b/services.html
@@ -32,7 +32,7 @@
     </script>
     <script> 
         $(function(){
-          $("#header").load("header2.html"); 
+          $("#header").load("header.html"); 
           $("#footer").load("footer.html");
         });
     </script> 
@@ -284,16 +284,18 @@
                 </h3>
                 <ul class="social-icons">
                     <li>
-                        <a href="#"><i class="icon ion-logo-facebook"></i></a>
+                        <a href="https://facebook.com/valerietech.in"><i class="icon ion-logo-facebook"></i></a>
                     </li>
+<!--
                     <li>
-                        <a href="#"><i class="icon ion-logo-twitter"></i></a>
+                        <a href="https://twitter.com/valerietech.in"><i class="icon ion-logo-twitter"></i></a>
                     </li>
                     <li>
                         <a href="#"><i class="icon ion-logo-googleplus"></i></a>
                     </li>
+-->
                     <li>
-                        <a href="#"><i class="icon ion-logo-instagram"></i></a>
+                        <a href="https://instagram.com/valerietech.in"><i class="icon ion-logo-instagram"></i></a>
                     </li>
                 </ul>
             </div>
