--- a/header2.html
+++ b/header2.html
@@ -14,7 +14,10 @@
                 <a href="offers">Offers</a>
             </li>
             <li>
-                <a href="index#contact">Contact</a>
+                <a href="form">Build a PC</a>
+            </li>
+            <li>
+                <a href="index#contact">Contact Us</a>
             </li>
         </ul>
         <a class="mobile-nav-icon js--nav-icon"><i class="icon ion-ios-menu"></i></a>
