--- a/offers.html
+++ b/offers.html
@@ -40,7 +40,7 @@
     
     <script> 
         $(function(){
-          $("#header").load("header.html"); 
+          $("#header").load("header2.html"); 
           $("#footer").load("footer.html");
         });
     </script> 
