--- a/services.html
+++ b/services.html
@@ -32,7 +32,7 @@
     </script>
     <script> 
         $(function(){
-          $("#header").load("header.html"); 
+          $("#header").load("header2.html"); 
           $("#footer").load("footer.html");
         });
     </script> 
